--- a/public/stylesheets/base.css
+++ b/public/stylesheets/base.css
@@ -18,7 +18,7 @@ html {
   -webkit-font-smoothing: antialiased; }
 
 body {
-  background-color: #000;
+  background-color: #2092b6;
   padding: 0;
   margin: 0;
   color: #F2F2F2;
